static/css/style.css
/* Body / Main / Base Content */
body {
    background-color: #f0efef;
    color: #5a5a5a;
    display: flex;
    min-height: 100vh;
    flex-direction: column;
}

main {
    flex: 1 0 auto;
    min-height: 50vh;
}

.btn {
    border-radius: 5px;
}

.card {
    border-radius: 5px;
}

hr {
    border: 0;
    height: 1px;
    background-color: rgb(90, 89, 89);
    background-image: linear-gradient(to right, #ccc, rgb(192, 192, 192), #ccc);
}

i.material-icons {
    margin-left: 0;
}

.page-footer {
    padding: 0;
}
.footer-content {
    margin-bottom: 0;
}

.footer-content .footer-icon {
    padding: 0;
}

/* Buttons */
.homepage-signin-btn {
    background-color: #cddc39;
    color: #444444;
    border: 1px solid rgb(185, 182, 182);
    box-shadow: none;
}

.homepage-signin-btn:hover {
    background-color: #b4c013;
    border: 1px solid rgb(94, 92, 92);
    box-shadow: none;
    background-color: #b4c013;
}

.homepage-signup-btn {
    background-color: #275a94ab;
    color: #fff;
    border: 1px solid rgb(185, 182, 182);
    box-shadow: none;
}

.homepage-signup-btn:hover {
    background: #1e4777ab;
    border: 1px solid rgb(94, 92, 92);
    box-shadow: none;
}

a.cancel-btn {
    color: rgba(219, 92, 8, 0.829);
    box-shadow: none;
    border: 1px solid rgb(185, 182, 182);
    border-radius: 8px;
}

a.cancel-btn:hover {
    border: 1px solid rgb(94, 92, 92);
    box-shadow: none;
}

.submit-btn {
    background-color: #cddc39;
    box-shadow: none;
    color: #444444;
    border: 1px solid rgb(185, 182, 182);
    border-radius: 8px;
}

.submit-btn:hover {
    background-color: #b4c013;
    border: 1px solid rgb(94, 92, 92);
    box-shadow: none;
}

a.edit-btn {
    color: rgba(2, 134, 81, 0.719);
    box-shadow: none;
    border: 1px solid rgb(185, 182, 182);
    border-radius: 8px;
}

a.edit-btn:hover {
    border: 1px solid rgb(94, 92, 92);
    box-shadow: none;
}

a.delete-btn {
    color: rgba(173, 26, 26, 0.685);
    box-shadow: none;
    border: 1px solid rgb(185, 182, 182);
    border-radius: 8px;
}

a.delete-btn:hover {
    border: 1px solid rgb(94, 92, 92);
    box-shadow: none;
}

/* Homepage */
.homepage-card {
    margin: 30px 0 0 0;
    background: #f0efef;
}

h6.strap-line {
    margin-top: 25px;
    margin-bottom: 25px;
}

h5.sub-title {
    margin-top: 25px;
}

.homepage-btns-row {
    margin: 50px 0;
}

/* Sign Up */
.signup-card {
    margin: 30px 0 0 0;
    padding-bottom: 10px;
    background: #f0efef;
}

.signup-card .signup-header {
    margin: 0 0 20px 0;
}

/* Sign In */
.signin-card {
    margin: 30px 0 0 0;
    padding-bottom: 10px;
    background: #f0efef;
}

.signin-card .signin-header {
    margin: 0 0 20px 0;
}

/* Blog Posts Page */
#blog-search {
    padding: 20px 0 0 0;
    margin: 0;
}

.post-content {
    min-height: 75px;
    white-space: pre-wrap;
    color: #5a5a5a;
}

.favourite-heart {
    color: rgb(192, 79, 79);
}

.post-actions {
    max-height: 30px;
    margin: 15px 0 0 0;
}

.edit-post-content .row {
    margin: 0;
}

.flash-content {
    margin-top: 2.5rem;
}

/* Profile Page */
.profile-card {
    margin: 1.5rem 0 0 0;
}

.profile-header {
    color: #444444;
    text-transform: capitalize;
    margin: 0;
}

.tabs {
    background: transparent;
    border-radius: 5px;
    padding: 0 .75rem;
}

.tabs .tab {
    padding: 0 .75rem;
}

.tabs .tab a {
    color: #444444;
}

.tabs .indicator {
    background-color: rgb(185, 192, 192);
}

.tabs .tab a:focus, .tabs .tab a:focus.active {
    background: transparent;
    color: #444444;
}

.selection-empty {
    padding: 20px 0;
}

/* Manage Categories Page */
.categories-card {
    margin: 30px 0 0 0;
    padding-bottom: 10px;
    background: #f0efef;
}

.categories-card .categories-header {
    margin: 0 0 20px 0;
}

.categories-card .card-action {
    border: none;
}

.category-row {
    margin: 5px 10px;
    background: #f0efef;
}

.card .category-content {
    padding: 0;
    font-size: 10px;
}

.card .category-content .category-title {
    margin: 0;
}

.new-category-btn {
    margin-top: 20px;
}

.new-category-card {
    margin: 30px 0 0 0;
    padding-bottom: 10px;
    background: #f0efef;
}

.new-category-card .new-category-header {
    margin: 0 0 20px 0;
}

/* Edit Category Page */
.edit-category-card {
    margin: 30px 0 0 0;
    padding-bottom: 10px;
    background: #f0efef;
}

.edit-category-card .edit-category-header {
    margin: 0 0 20px 0;
}

.edit-category-card .edit-category-form {
    margin: 10px 0 0 0;
}

/* New Post Page */
.new-post-card {
    margin: 30px 0 0 0;
    padding-bottom: 10px;
    background: #f0efef;
    
}

.new-post-card .new-post-header {
    margin: 0 0 20px 0;
}

.new-post-category, .new-post-title, .new-post-content {
    color: #5a5a5a;
}

/* Edit Post Page */
.edit-post-card {
    margin: 30px 0 0 0;
    padding-bottom: 20px;
    background: #f0efef;
}

.edit-post-card .edit-post-header {
    margin: 0 0 20px 0;
}

.edit-post-category, .edit-post-title, .edit-post-content {
    color: #5a5a5a;
}

